@@ -123,10 +123,7 @@ public class CrateExecutor implements Executor {
             return;
         }
         currentTaskId = taskInfo.getTaskId();
-        driver.sendStatusUpdate(TaskStatus.newBuilder()
-                .setTaskId(currentTaskId)
-                .setState(TaskState.TASK_STARTING)
-                .build());
+        sendTaskStatus(driver, TaskState.TASK_STARTING);
 
         CrateExecutableInfo crateTask = null;
         try {
@@ -155,21 +152,13 @@ public class CrateExecutor implements Executor {
     public void killTask(ExecutorDriver driver, TaskID taskId) {
         LOGGER.info("Killing task : " + taskId.getValue());
         healthCheck.cancel(true);
-        if(forceShutdown){
+        int pid = task.pid();
+        if (forceShutdown){
             forceShutdownCrate(driver);
-            return;
-        }
-        if (task.process != null) {
+        } else if (pid >= 0 && task.process != null) {
             LOGGER.debug("Found task to kill: " + taskId.getValue());
-            int pid = task.pid();
-            if (pid == -1) {
-                LOGGER.error("Graceful shutdown failed. Could not read crate.pid.");
-                task.process.destroy();
-                task.process = null;
-                return;
-            }
             gracefulShutdownCrate(driver);
-        } else  {
+        } else {
             LOGGER.error("No running task found. Stopping executor.");
             driver.sendStatusUpdate(TaskStatus.newBuilder()
                     .setTaskId(taskId)
@@ -179,41 +168,37 @@ public class CrateExecutor implements Executor {
         }
     }
 
+    private void sendTaskStatus(ExecutorDriver driver, TaskState state){
+        driver.sendStatusUpdate(TaskStatus.newBuilder()
+                .setTaskId(currentTaskId)
+                .setState(state)
+                .build());
+    }
+
     private void gracefulShutdownCrate(ExecutorDriver driver) {
+        sendTaskStatus(driver, TaskState.TASK_KILLING);
         boolean success = task.gracefulStop();
         if (success) {
-            driver.sendStatusUpdate(TaskStatus.newBuilder()
-                    .setTaskId(currentTaskId)
-                    .setState(TaskState.TASK_KILLED)
-                    .build());
+            sendTaskStatus(driver, TaskState.TASK_KILLED);
             driver.stop();
         } else {
-            driver.sendStatusUpdate(TaskStatus.newBuilder()
-                    .setTaskId(currentTaskId)
-                    .setState(TaskState.TASK_RUNNING)
-                    .build());
+            // Crate could not be stopped gracefully: send task back to RUNNING state!
+            sendTaskStatus(driver, TaskState.TASK_RUNNING);
         }
     }
 
     public void forceShutdownCrate(ExecutorDriver driver) {
-        driver.sendStatusUpdate(TaskStatus.newBuilder()
-                .setTaskId(currentTaskId)
-                .setState(TaskState.TASK_KILLING)
-                .build());
+        sendTaskStatus(driver, TaskState.TASK_KILLING);
         LOGGER.debug("Stop Crate process.");
-        task.process.destroy();
-        driver.sendStatusUpdate(TaskStatus.newBuilder()
-                .setTaskId(currentTaskId)
-                .setState(TaskState.TASK_KILLED)
-                .build());
+        task.destroy();
+        sendTaskStatus(driver, TaskState.TASK_KILLED);
         driver.stop();
     }
 
 
     private void restartCrate(ExecutorDriver driver) {
         LOGGER.debug("Restart Crate process.");
-        task.process.destroy();
-        task.process = null;
+        task.destroy();
         startProcess(driver, task);
     }
 
@@ -357,10 +342,7 @@ public class CrateExecutor implements Executor {
     private void fail(ExecutorDriver driver) {
         cancelHealthCheckIfExists();
         healthCheckScheduler.shutdown();
-        driver.sendStatusUpdate(TaskStatus.newBuilder()
-                .setTaskId(currentTaskId)
-                .setState(TaskState.TASK_FAILED)
-                .build());
+        sendTaskStatus(driver, TaskState.TASK_FAILED);
         driver.stop();
     }
 
@@ -483,6 +465,11 @@ public class CrateExecutor implements Executor {
               IOUtils.closeQuietly(pidFile);
             }
             return -1;
+        }
+
+        public void destroy() {
+            this.process.destroy();
+            this.process = null;
         }
 
         class GracefulShutdownWorker implements Runnable {
